// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#<TextAreaField /> it should display validation errors 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <textarea
      className="form-control "
      name="about_text"
      onChange={[Function]}
      rows={20}
      validators={
        Array [
          [Function],
        ]
      }
      value="a"
    />
  </div>
</form>
`;

exports[`#<TextAreaField /> should render a single input tag with no bootstrap styles 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <textarea
      className="form-control "
      name="about_text"
      onChange={[Function]}
      rows={5}
      value=""
    />
  </div>
</form>
`;

exports[`#<TextAreaField /> should render an input field with the bootstrap styled tags 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="form-group"
  >
    <textarea
      className="form-control "
      name="about_text"
      onChange={[Function]}
      rows={5}
      value="joe"
    />
  </div>
</form>
`;

exports[`<Form /> should render a form element with bootstrap extra tags 1`] = `
<form
  bare={false}
  context={[Function]}
  onSubmit={[Function]}
  state={
    Object {
      "username": "joebloggs",
    }
  }
/>
`;

exports[`<Form /> should render a form element with no extra tags 1`] = `
<form
  onSubmit={[Function]}
/>
`;
